docs: explain JNI vs Panama native backend selection
Document that the native providers bundle JNI by default and how to opt into
the Panama (FFM) backend on Java 22+, including why it is not bundled (its
Java 22 bytecode breaks ServiceLoader discovery on older JVMs).